syntax = "proto3";
package protobuf;

message CollapsedBn{
    repeated bytes EncodedChildren = 1;
}

message CollapsedEn{
    bytes Key = 1;
    bytes EncodedChild = 2;
}

message CollapsedLn{
    bytes Key = 1;
    bytes Value = 2;
}
